k8s/goviolin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goviolin-service
spec:
  selector:
    app: goviolin
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
