k8s/goviolin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: goviolin-site.go
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: goviolin-service
            port: 
              number: 8080
